Add requests PUT DELETE swagger + Add validações 404 e 400
